Minor: Remove usage of forbidden APIs